##Text encoding: utf-8

2006-02-25  Jean Bréfort  <jean.brefort@normalesup.org>
	* Makefile.am: add Gnome Crystal stuff.
	* README: ditto.
	* autogen.sh: add gnome-docs-utils initialization.
	* configure.ac: add new directories.
	* docs/Makefile.am: add Gnome Crystal stuff.
	* docs/help/Makefile.am: ditto.
	* docs/help/crystal/C/gcrystal-unstable.xml: ditto.
	* docs/help/crystal/C/gcrystal.xml: ditto.
	* docs/help/crystal/C/legal.xml: ditto.
	* docs/help/crystal/Makefile.am: ditto.
	* docs/help/crystal/gcrystal-unstable.omf.in: ditto.
	* gchemutils.xml.in: ditto.
	* gcu/application.cc: fixed license.
	* gcu/application.h: ditto.
	* gcu/atom.cc: ditto.
	* gcu/atom.h: ditto.
	* gcu/bond.cc: ditto.
	* gcu/bond.h: ditto.
	* gcu/chemistry.cc: ditto.
	* gcu/chemistry.h: ditto.
	* gcu/crystalatom.cc: ditto.
	* gcu/crystalatom.h: ditto.
	* gcu/crystalbond.cc: ditto.
	* gcu/crystalbond.h: ditto.
	* gcu/crystalcleavage.cc: ditto.
	* gcu/crystalcleavage.h: ditto.
	* gcu/crystaldoc.cc: ditto.
	* gcu/crystaldoc.h: ditto.
	* gcu/crystalline.cc: ditto.
	* gcu/crystalline.h: ditto.
	* gcu/crystalview.cc: ditto.
	* gcu/crystalview.h: ditto.
	* gcu/dialog.cc: ditto.
	* gcu/dialog.h: ditto.
	* gcu/document.cc: ditto.
	* gcu/document.h: ditto.
	* gcu/element.cc: ditto.
	* gcu/element.h: ditto.
	* gcu/filechooser.cc: ditto.
	* gcu/filechooser.h: ditto.
	* gcu/formula.cc: ditto.
	* gcu/formula.h: ditto.
	* gcu/gtkchem3dviewer.cc: ditto.
	* gcu/gtkchem3dviewer.h: ditto.
	* gcu/gtkcomboperiodic.c: ditto.
	* gcu/gtkcomboperiodic.h: ditto.
	* gcu/gtkcrystalviewer.cc: ditto.
	* gcu/gtkcrystalviewer.h: ditto.
	* gcu/gtkperiodic.c: ditto.
	* gcu/gtkperiodic.h: ditto.
	* gcu/isotope.cc: ditto.
	* gcu/isotope.h: ditto.
	* gcu/matrix.cc: ditto.
	* gcu/matrix.h: ditto.
	* gcu/matrix2d.cc: ditto.
	* gcu/matrix2d.h: ditto.
	* gcu/object.cc: ditto.
	* gcu/object.h: ditto.
	* gcu/xml-utils.cc: ditto.
	* gcu/xml-utils.h: ditto.
	* glade/Makefile.am: ditto.